--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -20,6 +20,14 @@
 	top: 20px;
 }
 
+#logo{
+	width: 100px;
+	height: 100px;
+	position: absolute;
+	right: 50px;
+	top: 60px;
+}
+
 #menu{
 	position: absolute;
 	top: 70px;
