--- a/WebContent/CSS/result.css
+++ b/WebContent/CSS/result.css
@@ -40,6 +40,14 @@
 
 #result {
 	height: 400px;
+	background-color: red;
+	color: white;
+	
+	padding-left: 50px;
+}
+
+#high{
+	font-family:Impact;
 }
 
 #resulttext {
